--- a/board_20210721/board_20210721/src/main/resources/static/form.html
+++ b/board_20210721/board_20210721/src/main/resources/static/form.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>main</title>
+    <title>join</title>
   </head>
   <body>
   
@@ -22,10 +22,10 @@
 	    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 	        <li class="nav-item">
-	          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+	          <a class="nav-link" aria-current="page" href="index.html">Home</a>
 	        </li>
 	        <li class="nav-item">
-	          <a class="nav-link" href="form.html">회원가입</a>
+	          <a class="nav-link active" href="form.html">회원가입</a>
 	        </li>
 	      </ul>
 	    </div>
@@ -33,7 +33,26 @@
 	</nav>
   
   
-    <h1>메인 페이지</h1>
+    <h1>회원가입 페이지</h1>
+    
+    <div class="container">
+    <form>
+	  <div class="mb-3">
+	    <label for="userId" class="form-label">ID</label>
+	    <input type="text" class="form-control" id="userId" aria-describedby="idHelp">
+	    <div id="idHelp" class="form-text">We'll never share your ID with anyone else.</div>
+	  </div>
+	  <div class="mb-3">
+	    <label for="userPw" class="form-label">Password</label>
+	    <input type="password" class="form-control" id="userPw">
+	  </div>
+	  <div class="mb-3">
+	    <label for="userName" class="form-label">Name</label>
+	    <input type="text" class="form-control" id="userName">
+	  </div>
+	  <button type="submit" class="btn btn-primary">Submit</button>
+	</form>
+	</div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
